fix: images overflow the content width

--- a/_sass/otto/_scaffoldings.scss
+++ b/_sass/otto/_scaffoldings.scss
@@ -30,7 +30,7 @@ p {
 }
 
 img {
-    display: block;
+    max-width: 100%;
     margin: 0 0 1rem;
     border-radius: 0.25rem;
 }
